--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "@testing-library/user-event": "12.1.10",
     "@types/jest": "26.0.15",
     "@types/node": "12.0.0",
-    "@types/react": "^18.2.18",
+    "@types/react": "16.9.53",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.15",
     "@types/redux": "3.6.0",
     "axios": "0.21.1",
-    "global": "^4.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-redux": "^8.1.2",
+    "react-redux": "7.2.2",
     "react-scripts": "4.0.1",
-    "redux": "^4.2.1",
-    "typescript": "^5.1.6",
+    "redux": "4.0.5",
+    "typescript": "4.0.3",
     "web-vitals": "0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
